--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="ro">
     <div class="col-xs-10">
-        <app-shopping-edit></app-shopping-edit>
+        <app-shopping-edit (ingredientAdded)= "onIngredientAdded($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a href="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">{{ingredient.name}} {{ingredient.amount}}</a>
